update live site for recipes

--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
   <link rel="apple-touch-icon" href="assets/img/logo.svg">
   <link rel="icon" type="image/svg" href="assets/img/logo.svg">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,300;0,400;0,700;1,400&family=Ubuntu:ital,wght@0,300;0,400;0,700;1,400&display=swap"
-    rel="stylesheet">
-
   <link rel="stylesheet" href="/assets/css/final.css">
 
   <script type="module" src="/assets/js/main.js"></script>
@@ -46,7 +40,7 @@
   <main>
     <section id="home" class="flex flex-col justify-center items-center">
       <div>
-        <h2 class="p-2 m-0 font-spectral">Home</h2>
+        <h2 class="p-2 m-0 font-youngSerif">Home</h2>
       </div>
       <div
         class="bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
@@ -56,7 +50,7 @@
       <div class="w-full lg:flex lg:flex-row">
         <div
           class="flex flex-column h-[396px] lg:min-w-[639px] items-end bg-no-repeat bg-center bg-lightSteelBlue dark:bg-mediumPurple"
-          style="background-image: url(/assets/img/cat.jpg)" alt="my cat">
+          style="background-image: url(/assets/img/cat.webp)" alt="my cat">
           <div class="w-full text-center opacity-50 bg-black dark:bg-white">
             <p class="text-white dark:text-black p-2 m-0">This is my cat</p>
           </div>
@@ -85,7 +79,7 @@
     </section>
     <section id="about" class="flex flex-col justify-center items-center">
       <div>
-        <h2 class="p-2 m-0 font-spectral">About</h2>
+        <h2 class="p-2 m-0 font-youngSerif">About</h2>
       </div>
       <div
         class="bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
@@ -269,7 +263,7 @@
 
     <section id="projects" class="flex flex-col justify-center items-center">
       <div>
-        <h2 class="p-2 m-0 font-spectral">Projects</h2>
+        <h2 class="p-2 m-0 font-youngSerif">Projects</h2>
       </div>
       <div>
         <h4 class="mx-2">
@@ -297,7 +291,7 @@
       <div class="x-2 lg:flex lg:flex-row w-full">
         <div
           class="flex flex-col w-full h-[359px] lg:max-w-[639px] bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
-          style="background-image: url(/assets/img/placeholder.png)" alt="Oops! There's nothing there!">
+          style="background-image: url(/assets/img/placeholder.webp)" alt="Oops! There's nothing there!">
           <div class="text-center opacity-50 bg-black">
             <p class="text-white p-2 m-0">Nothing</p>
           </div>
@@ -307,7 +301,7 @@
         </div>
         <div
           class="flex flex-col w-full h-[359px] lg:max-w-[639px] bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
-          style="background-image: url(/assets/img/placeholder.png)" alt="Oops! There's nothing there!">
+          style="background-image: url(/assets/img/placeholder.webp)" alt="Oops! There's nothing there!">
           <div class="text-center opacity-50 bg-black">
             <p class="text-white p-2 m-0">Nothing</p>
           </div>
@@ -317,7 +311,7 @@
         </div>
         <div
           class="flex flex-col w-full h-[359px] lg:max-w-[639px] bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
-          style="background-image: url(/assets/img/placeholder.png)" alt="Oops! There's nothing there!">
+          style="background-image: url(/assets/img/placeholder.webp)" alt="Oops! There's nothing there!">
           <div class="text-center opacity-50 bg-black">
             <p class="text-white p-2 m-0">Nothing</p>
           </div>
@@ -333,7 +327,7 @@
       <div class="x-2 lg:flex lg:flex-row w-full">
         <div
           class="flex flex-col w-full h-[359px] lg:max-w-[639px] bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
-          style="background-image: url(/assets/img/placeholder.png)" alt="Oops! There's nothing there!">
+          style="background-image: url(/assets/img/placeholder.webp)" alt="Oops! There's nothing there!">
           <div class="text-center opacity-50 bg-black">
             <p class="text-white p-2 m-0">Nothing</p>
           </div>
@@ -343,7 +337,7 @@
         </div>
         <div
           class="flex flex-col w-full h-[359px] lg:max-w-[639px] bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
-          style="background-image: url(/assets/img/placeholder.png)" alt="Oops! There's nothing there!">
+          style="background-image: url(/assets/img/placeholder.webp)" alt="Oops! There's nothing there!">
           <div class="text-center opacity-50 bg-black">
             <p class="text-white p-2 m-0">Nothing</p>
           </div>
@@ -353,7 +347,7 @@
         </div>
         <div
           class="flex flex-col w-full h-[359px] lg:max-w-[639px] bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
-          style="background-image: url(/assets/img/placeholder.png)" alt="Oops! There's nothing there!">
+          style="background-image: url(/assets/img/placeholder.webp)" alt="Oops! There's nothing there!">
           <div class="text-center opacity-50 bg-black">
             <p class="text-white p-2 m-0">Nothing</p>
           </div>
@@ -369,7 +363,7 @@
       <div class="x-2 lg:flex lg:flex-row w-full">
         <div
           class="flex flex-col w-full h-[359px] lg:max-w-[639px] bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
-          style="background-image: url(/assets/img/placeholder.png)" alt="Oops! There's nothing there!">
+          style="background-image: url(/assets/img/placeholder.webp)" alt="Oops! There's nothing there!">
           <div class="text-center opacity-50 bg-black">
             <p class="text-white p-2 m-0">Nothing</p>
           </div>
@@ -379,7 +373,7 @@
         </div>
         <div
           class="flex flex-col w-full h-[359px] lg:max-w-[639px] bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
-          style="background-image: url(/assets/img/placeholder.png)" alt="Oops! There's nothing there!">
+          style="background-image: url(/assets/img/placeholder.webp)" alt="Oops! There's nothing there!">
           <div class="text-center opacity-50 bg-black">
             <p class="text-white p-2 m-0">Nothing</p>
           </div>
@@ -389,33 +383,13 @@
         </div>
         <div
           class="flex flex-col w-full h-[359px] lg:max-w-[639px] bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
-          style="background-image: url(/assets/img/placeholder.png)" alt="Oops! There's nothing there!">
+          style="background-image: url(/assets/img/placeholder.webp)" alt="Oops! There's nothing there!">
           <div class="text-center opacity-50 bg-black">
             <p class="text-white p-2 m-0">Nothing</p>
           </div>
           <div class="text-center w-full opacity-50 bg-black">
             <p class="text-white p-2 m-0">Nothing</p>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="recipes" class="flex flex-col justify-center items-center">
-      <div>
-        <h2 class="p-2 m-0 font-spectral">Recipes</h2>
-      </div>
-      <div class="showcase">
-        <div></div>
-
-        <div class="x-2 lg:flex lg:flex-row w-full">
-          <ul class="flex flex-col justify-center items-center">
-            <li>Ingedient 1</li>
-            <li>Ingedient 2</li>
-            <li>Ingedient 3</li>
-            <li>Ingedient 4</li>
-          </ul>
-          <img src="/assets/img/placeholder.png" alt="">
-          <p>recipe content</p>
         </div>
       </div>
     </section>
@@ -429,7 +403,7 @@
   <footer
     class="mt-2 flex flex-col sm:flex-row w-full justify-evenly items-center bg-mediumPurple dark:bg-lightSteelBlue dark:text-black text-center">
     <h2 class="sm:my-4">Adrigorithm</h2>
-    <p class="sm:my-4">Copyright © 2023 - Adrigorithm</p>
+    <p class="sm:my-4">Copyright © 2024 - Adrigorithm</p>
   </footer>
 </body>
 
