--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       </div>
       <div id="Adribot" class="flex flex-col lg:flex-row w-full">
         <div
-          class="flex flex-col h-[359px] lg:max-w-[536px] w-full bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
+          class="flex flex-col h-[359px] w-full bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
           style="background-image: url(/assets/img/adribot.webp)" alt="adribot">
           <div class="text-center opacity-50 bg-black">
             <p class="text-white p-2 m-0">Adribot</p>
@@ -306,7 +306,7 @@
       </div>
       <div id="Adrigorithm.github.io" class="flex flex-col lg:flex-row w-full">
         <div
-          class="flex flex-col h-[359px] lg:max-w-[743px] w-full bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
+          class="flex flex-col h-[359px] w-full bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
           style="background-image: url(/assets/img/myWebsite.webp)" alt="myWebsite">
           <div class="text-center opacity-50 bg-black">
             <p class="text-white p-2 m-0">My Website</p>
@@ -322,7 +322,7 @@
       </div>
       <div id="DeLijn.Net" class="flex flex-col lg:flex-row w-full">
         <div
-          class="flex flex-col h-[359px] lg:max-w-[523px] w-full bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
+          class="flex flex-col h-[359px] w-full bg-center bg-lightSteelBlue dark:bg-mediumPurple bg-no-repeat justify-between"
           style="background-image: url(/assets/img/deLijn.Net.webp)" alt="deLijn.Net">
           <div class="text-center opacity-50 bg-black">
             <p class="text-white p-2 m-0">DeLijn.Net</p>
