--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="apple-touch-icon" href="assets/img/logo.svg">
   <link rel="icon" type="image/svg" href="assets/img/logo.svg">
 
-  <link rel="stylesheet" href="/assets/css/finalV5.css">
+  <link rel="stylesheet" href="/assets/css/final.css">
 
   <script type="module" src="/assets/js/main.js"></script>
 
@@ -27,6 +27,7 @@
 </head>
 
 <body class="flex flex-col font-ubuntu m-0 bg-white dark:bg-black text-black dark:text-white">
+
   <nav id="mainNav">
     <ul
       class="flex flex-col sm:flex-row p-0 sm:py-1 m-0 sm:mb-0 list-none justify-center items-center text-2xl bg-mediumPurple dark:bg-lightSteelBlue">
@@ -37,6 +38,7 @@
       <li class="sm:order-4"><a class="block no-underline text-black p-3" href="#recipes">Recipes</a></li>
     </ul>
   </nav>
+
   <main>
     <section id="home" class="flex flex-col justify-center items-center">
       <div>
@@ -46,7 +48,6 @@
         class="bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
         <h3 class="m-0 py-1 pl-4">Welcome</h3>
       </div>
-
       <div class="w-full lg:flex lg:flex-row">
         <div
           class="flex flex-column h-[396px] lg:min-w-[639px] items-end bg-no-repeat bg-center bg-lightSteelBlue dark:bg-mediumPurple"
@@ -55,7 +56,6 @@
             <p class="text-white dark:text-black p-2 m-0">This is my cat</p>
           </div>
         </div>
-
         <div>
           <h4 class="px-2 font-md">
             <span>
@@ -72,7 +72,6 @@
             I have a black belt in karate and I'm quite the pastry chef if I do say so myself.
             Very well, that's enough for now, there's more like this in the "About" section in case you wish to know
             more.
-
           </p>
         </div>
       </div>
@@ -86,7 +85,6 @@
         <h3 class="m-0 py-1 pl-4">Synopsis</h3>
       </div>
       <div class="flex flex-col p-0 w-full">
-
         <div class="lg:flex lg:flex-row flex flex-col">
           <div class="lg:w-1/2 bg-lightSteelBlue dark:bg-mediumPurple text-center text-bold">
             <p class="m-0 p-2">Name:</p>
@@ -95,7 +93,6 @@
             <p class="m-0 p-2">Adriaan Waem</p>
           </div>
         </div>
-
         <div class="lg:flex lg:flex-row flex flex-col">
           <div class="lg:w-1/2 bg-lightSteelBlue dark:bg-mediumPurple text-center text-bold">
             <p class="m-0 p-2">Nationality:</p>
@@ -104,7 +101,6 @@
             <p class="m-0 p-2">Belgian</p>
           </div>
         </div>
-
         <div class="lg:flex lg:flex-row flex flex-col">
           <div class="lg:w-1/2  bg-lightSteelBlue dark:bg-mediumPurple text-center text-bold">
             <p class="m-0 p-2">Date of Birth:</p>
@@ -113,7 +109,6 @@
             <p class="m-0 p-2">04/12/1998</p>
           </div>
         </div>
-
         <div class="lg:flex lg:flex-row flex flex-col">
           <div class="lg:w-1/2 bg-lightSteelBlue dark:bg-mediumPurple text-center text-bold">
             <p class="m-0 p-2">Email*:</p>
@@ -122,7 +117,6 @@
             <p class="m-0 p-2"><a href="mailto:2ndalgorithm@gmail.com">Read notice below before clicking</a></p>
           </div>
         </div>
-
       </div>
       <fieldset class="m-2 border-solid border-2 border-zaffre">
         <legend class="text-bold">Notice</legend>
@@ -134,23 +128,18 @@
         class="bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
         <h3 class="m-0 py-1 pl-4">Education</h3>
       </div>
-
       <div class="flex flex-col w-full justify-center items-center timeline">
-
       </div>
-
       <div
         class="mt-2 bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
         <h3 class="m-0 py-1 pl-4">Skilltree</h3>
       </div>
-
       <div class="mx-2">
         <p>You know how everyone adores reading (yes that was sarcasm)? Did you know according to study IQ values of
           humans have declined over the years ever since TV was introduced to the public? Averaging at a staggering 10
           points less since 1962 in fact.</p>
         <p>Luckily for you I have nicely formatted this section in a table for some light reading.</p>
       </div>
-
       <div class="mx-2 lg:flex lg:flex-row w-full">
         <div class="w-full mx-2">
           <h4>
@@ -174,7 +163,6 @@
             </p>
           </div>
         </div>
-
         <div class="w-full mb-2 mx-2">
           <h4>
             <span>
@@ -249,18 +237,13 @@
           </div>
         </div>
       </div>
-
       <div
         class="bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
         <h3 class="m-0 py-1 pl-4">Experience</h3>
       </div>
-
       <div class="flex flex-col w-full justify-center items-center timeline">
-
       </div>
-
     </section>
-
     <section id="projects" class="flex flex-col justify-center items-center">
       <div>
         <h2 class="p-2 m-0 font-youngSerif">Projects</h2>
@@ -333,13 +316,40 @@
         </div>
       </div>
     </section>
-
+    <section id="contact" class="flex flex-col justify-center items-center">
+      <div>
+        <h2 class="p-2 m-0 font-youngSerif">Contact</h2>
+      </div>
+      <div class="flex lg:flex-row w-full items-center justify-center">
+        <a href="https://linkedin.com/in/a3w">
+          <svg width="100" height="100" viewBox="0 0 24 24">
+            <path
+              d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19a.66.66 0 000 .14V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z"
+              class="fill-lightSteelBlue dark:fill-mediumPurple"></path>
+          </svg>
+        </a>
+        <a href="https://discordapp.com/users/135081249017430016">
+          <svg width="100" height="100" viewBox="0 0 24 24">
+            <path
+              d="M18.59 5.88997C17.36 5.31997 16.05 4.89997 14.67 4.65997C14.5 4.95997 14.3 5.36997 14.17 5.69997C12.71 5.47997 11.26 5.47997 9.83001 5.69997C9.69001 5.36997 9.49001 4.95997 9.32001 4.65997C7.94001 4.89997 6.63001 5.31997 5.40001 5.88997C2.92001 9.62997 2.25001 13.28 2.58001 16.87C4.23001 18.1 5.82001 18.84 7.39001 19.33C7.78001 18.8 8.12001 18.23 8.42001 17.64C7.85001 17.43 7.31001 17.16 6.80001 16.85C6.94001 16.75 7.07001 16.64 7.20001 16.54C10.33 18 13.72 18 16.81 16.54C16.94 16.65 17.07 16.75 17.21 16.85C16.7 17.16 16.15 17.42 15.59 17.64C15.89 18.23 16.23 18.8 16.62 19.33C18.19 18.84 19.79 18.1 21.43 16.87C21.82 12.7 20.76 9.08997 18.61 5.88997H18.59ZM8.84001 14.67C7.90001 14.67 7.13001 13.8 7.13001 12.73C7.13001 11.66 7.88001 10.79 8.84001 10.79C9.80001 10.79 10.56 11.66 10.55 12.73C10.55 13.79 9.80001 14.67 8.84001 14.67ZM15.15 14.67C14.21 14.67 13.44 13.8 13.44 12.73C13.44 11.66 14.19 10.79 15.15 10.79C16.11 10.79 16.87 11.66 16.86 12.73C16.86 13.79 16.11 14.67 15.15 14.67Z"
+              class="fill-lightSteelBlue dark:fill-mediumPurple"></path>
+          </svg>
+        </a>
+        <a href="https://github.com/Adrigorithm/">
+          <svg width="100" height="100" viewBox="0 0 17 17">
+            <path
+              d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
+              class="fill-lightSteelBlue dark:fill-mediumPurple"></path>
+          </svg>
+        </a>
+      </div>
+    </section>
     <a id="toTopButton" class="hidden" href="#">
       <img src="/assets/img/uArrowReceding.svg" class="h-20 w-20 fixed bottom-0 bg-white opacity-60 p-2"
         alt="NavigateTopArrow">
     </a>
-
   </main>
+
   <footer
     class="mt-2 flex flex-col sm:flex-row w-full justify-evenly items-center bg-mediumPurple dark:bg-lightSteelBlue dark:text-black text-center">
     <h2 class="sm:my-4">Adrigorithm</h2>
