--- a/cat/index.html
+++ b/cat/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="A3's den, I show stuff here, there's also cats.">
+  <meta name="description" content="El cau d'A3, aquí mostro coses, també hi ha gats.">
   <meta name="author" content="A3">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="A3's Den" />
+  <meta property="og:title" content="El Cau d'A3" />
   <meta property="og:url" content="index.html" />
-  <meta property="og:image" content="assets/img/logo.svg" />
+  <meta property="og:image" content="/assets/img/logo.svg" />
   <meta property="og:image:width" content="800" />
   <meta property="og:image:height" content="800" />
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="My personal website, this is where I showcase what I (can) do." />
-  <meta property="og:locale" content="en_GB" />
+  <meta property="og:description" content="El meu lloc web personal, aquí mostro el que (puc) fer." />
+  <meta property="og:locale" content="ca_ES" />
 
-  <link rel="apple-touch-icon" href="assets/img/logo.svg">
-  <link rel="icon" type="image/svg" href="assets/img/logo.svg">
+  <link rel="apple-touch-icon" href="/assets/img/logo.svg">
+  <link rel="icon" type="image/svg" href="/assets/img/logo.svg">
 
   <link rel="stylesheet" href="/assets/css/finalV1.css">
 
   <script type="module" src="/assets/js/main.js"></script>
 
-  <title>A3's Den</title>
+  <title>El Cau d'A3</title>
 </head>
 
 <body class="flex flex-col font-ubuntu m-0 bg-white dark:bg-black text-black dark:text-white">
@@ -32,13 +32,13 @@
     class="flex flex-col sm:flex-row p-2 bg-mediumPurple dark:bg-lightSteelBlue justify-between">
     <div class="flex flex-col sm:order-1 sm:flex-row items-center justify-items-center">
       <a class="block no-underline text-black" href="#about">
-        <h1 class="m-1 sm:m-3">About</h1>
+        <h1 class="m-1 sm:m-3">Sobre</h1>
       </a>
       <a class="block no-underline text-black" href="#projects">
-        <h1 class="m-1 sm:m-3">Projects</h1>
+        <h1 class="m-1 sm:m-3">Projectes</h1>
       </a>
       <a class="block no-underline text-black" href="#recipes">
-        <h1 class="m-1 sm:m-3">Recipes</h1>
+        <h1 class="m-1 sm:m-3">Receptes</h1>
       </a>
     </div>
 
@@ -60,14 +60,14 @@
       </div>
       <div
         class="bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
-        <h3 class="m-0 py-1 pl-4">Welcome</h3>
+        <h3 class="m-0 py-1 pl-4">Benvingut</h3>
       </div>
       <div class="w-full lg:flex lg:flex-row">
         <div
           class="flex flex-column h-[396px] lg:min-w-[639px] items-end bg-no-repeat bg-center bg-lightSteelBlue dark:bg-mediumPurple"
           style="background-image: url(/assets/img/cat.webp)" alt="my cat">
           <div class="w-full text-center opacity-50 bg-black dark:bg-white">
-            <p class="text-white dark:text-black p-2 m-0">This is my cat</p>
+            <p class="text-white dark:text-black p-2 m-0">Aquest és el meu gat</p>
           </div>
         </div>
         <div>
@@ -75,33 +75,32 @@
             <span>
               <img src="/assets/img/rChevron.svg" class="h-4" alt="subTitleIndicator">
             </span>
-            Introduction
+            Introducció
           </h4>
-          <p class="px-2">Well met visitor.
-            You being here means you've already made quite the effort finding me.
-            Therefore unless you leave right now, I will not let you leave empty-handed.
-            I go by "Adri" which you may or may not already know.
-            I am a Belgian software developer.
-            Nevertheless, I am not pidgeonholed,
-            I have a black belt in karate and I'm quite the pastry chef if I do say so myself.
-            Very well, that's enough for now, there's more like this in the "About" section in case you wish to know
-            more.
+          <p class="px-2">Ben trobat visitant.
+            El fet que siguis aquí significa que ja has fet un gran esforç per trobar-me.
+            Per tant, tret que marxis ara mateix, no et deixaré marxar amb les mans buides.
+            Em faig dir "Adri", cosa que potser ja sabies.
+            Sóc un desenvolupador de programari belga.
+            No obstant això, no estic encasellat,
+            tinc un cinturó negre en karate i sóc un pastisser força bo, si em permeteu dir-ho.
+            Bé, això és suficient per ara, hi ha més coses com aquesta a la secció "Sobre" si vols saber-ne més.
           </p>
         </div>
       </div>
     </section>
     <section id="about" class="flex flex-col justify-center items-center">
       <div>
-        <h2 class="p-2 m-0 font-youngSerif">About</h2>
+        <h2 class="p-2 m-0 font-youngSerif">Sobre</h2>
       </div>
       <div
         class="bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
-        <h3 class="m-0 py-1 pl-4">Synopsis</h3>
+        <h3 class="m-0 py-1 pl-4">Sinopsi</h3>
       </div>
       <div class="flex flex-col p-0 w-full">
         <div class="lg:flex lg:flex-row flex flex-col">
           <div class="lg:w-1/2 bg-lightSteelBlue dark:bg-mediumPurple text-center text-bold">
-            <p class="m-0 p-2">Name:</p>
+            <p class="m-0 p-2">Nom:</p>
           </div>
           <div class="lg:w-1/2 text-center">
             <p class="m-0 p-2">Adriaan Waem</p>
@@ -109,15 +108,15 @@
         </div>
         <div class="lg:flex lg:flex-row flex flex-col">
           <div class="lg:w-1/2 bg-lightSteelBlue dark:bg-mediumPurple text-center text-bold">
-            <p class="m-0 p-2">Nationality:</p>
+            <p class="m-0 p-2">Nacionalitat:</p>
           </div>
           <div class="lg:w-1/2 text-center">
-            <p class="m-0 p-2">Belgian</p>
+            <p class="m-0 p-2">Belga</p>
           </div>
         </div>
         <div class="lg:flex lg:flex-row flex flex-col">
           <div class="lg:w-1/2  bg-lightSteelBlue dark:bg-mediumPurple text-center text-bold">
-            <p class="m-0 p-2">Date of Birth:</p>
+            <p class="m-0 p-2">Data de naixement:</p>
           </div>
           <div class="lg:w-1/2 text-center">
             <p class="m-0 p-2">04/12/1998</p>
@@ -128,31 +127,29 @@
             <p class="m-0 p-2">Email*:</p>
           </div>
           <div class="lg:w-1/2 text-center">
-            <p class="m-0 p-2"><a href="mailto:adrigorithm@proton.me">Read notice below before clicking</a></p>
+            <p class="m-0 p-2"><a href="mailto:adrigorithm@proton.me">Llegiu l'avís a continuació abans de fer clic</a></p>
           </div>
         </div>
       </div>
       <fieldset class="m-2 border-solid border-2 border-zaffre">
-        <legend class="text-bold">Notice</legend>
+        <legend class="text-bold">Avís</legend>
         <p>
-          *: If you'd like to know more use this email address
+          *: Si vols saber-ne més, utilitza aquesta adreça de correu electrònic
         </p>
       </fieldset>
       <div
         class="bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
-        <h3 class="m-0 py-1 pl-4">Education</h3>
+        <h3 class="m-0 py-1 pl-4">Educació</h3>
       </div>
       <div class="flex flex-col w-full justify-center items-center timeline">
       </div>
       <div
         class="mt-2 bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
-        <h3 class="m-0 py-1 pl-4">Skilltree</h3>
+        <h3 class="m-0 py-1 pl-4">Habilitats</h3>
       </div>
       <div class="mx-2">
-        <p>You know how everyone adores reading (yes that was sarcasm)? Did you know according to study IQ values of
-          humans have declined over the years ever since TV was introduced to the public? Averaging at a staggering 10
-          points less since 1962 in fact.</p>
-        <p>Luckily for you I have nicely formatted this section in a table for some light reading.</p>
+        <p>Saps com a tothom li encanta llegir (sí, això era sarcasme)? Sabies que segons un estudi els valors del QI dels humans han disminuït des que es va introduir la televisió al públic? De mitjana, 10 punts menys des de 1962 en realitat.</p>
+        <p>Per sort per a tu, he formatat aquesta secció en una taula per fer una lectura lleugera.</p>
       </div>
       <div class="mx-2 flex flex-col lg:flex-row w-full">
         <div class="lg:w-full lg:mr-2">
@@ -160,20 +157,20 @@
             <span>
               <img src="/assets/img/rChevron.svg" class="h-4" alt="subTitleIndicator">
             </span>
-            Soft skills
+            Habilitats toves
           </h4>
           <div>
             <p class="bg-lightSteelBlue dark:bg-mediumPurple my-1 p-2">
-              Problem solving
+              Resolució de problemes
             </p>
             <p class="w-5/6 bg-lightSteelBlue dark:bg-mediumPurple my-1 p-2">
-              Adaptability
+              Adaptabilitat
             </p>
             <p class="w-4/5 bg-lightSteelBlue dark:bg-mediumPurple my-1 p-2">
-              Curiosity
+              Curiositat
             </p>
             <p class="w-4/5 bg-lightSteelBlue dark:bg-mediumPurple my-1 p-2">
-              Critical Thinking
+              Pensament crític
             </p>
           </div>
         </div>
@@ -182,11 +179,11 @@
             <span>
               <img src="/assets/img/rChevron.svg" class="h-4" alt="subTitleIndicator">
             </span>
-            Hard skills
+            Habilitats dures
           </h4>
           <div>
             <p class="bg-zaffre text-white mt-1 mb-0 p-2 rounded-tr-full">
-              Programming
+              Programació
             </p>
             <p class="bg-lightSteelBlue dark:bg-mediumPurple p-1 m-0 ml-3 p-1 rounded-tr-full">
               C#
@@ -253,32 +250,24 @@
       </div>
       <div
         class="bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
-        <h3 class="m-0 py-1 pl-4">Experience</h3>
+        <h3 class="m-0 py-1 pl-4">Experiència</h3>
       </div>
       <div class="flex flex-col w-full justify-center items-center timeline">
       </div>
     </section>
     <section id="projects" class="flex flex-col justify-center items-center">
       <div>
-        <h2 class="p-2 m-0 font-youngSerif">Projects</h2>
+        <h2 class="p-2 m-0 font-youngSerif">Projectes</h2>
       </div>
       <div>
         <h4 class="mx-2">
           <span>
             <img src="/assets/img/rChevron.svg" class="h-4" alt="subTitleIndicator">
           </span>
-          Notice
+          Nota
         </h4>
         <p class="mx-2">
-          Allow me this moment to rant about the pointlessness of education in Belgium. It sucks, it really does.
-          Anything that is not self-educted is either outdated crap or a cesspool of subjective/opinion-based teachings.
-          Of course this is also true in IT courses where up-to-datedness (I made that word up) is essential in many
-          places. An example which fits perfectly in both categories is as follows. We were forced to install the ORACLE
-          SQL Server varient (version 11g, one that is from 2011 - more than a decennium old since writing this). This
-          particular
-          piece of garbage is a compatibility nightmare, it doesn't work on anything not called Windows. You can also
-          find numerous unsettling facts about the Oracle foundation all over the internet. The reason for not using a
-          recent version was "it requires an internet connection", which we all know is hogwash of course.
+          Permeteu-me aprofitar aquest moment per queixar-me sobre la futilitat de l'educació a Bèlgica. És realment dolenta. Tot el que no és autodidacta és o bé una ximpleria obsoleta o un pou de lliçons subjectives/basades en opinions. Això és cert, per descomptat, per als cursos d'IT on la actualitat és fonamental a molts llocs. Un exemple perfecte que encaixa en ambdues categories és el següent. Ens van obligar a instal·lar la variant del servidor SQL d'ORACLE (versió 11g, una que data de 2011 - més d'una dècada des de la redacció d'aquest text). Aquesta peça específica de ferralla és un malson de compatibilitat, no funciona en res més que Windows. També pots trobar innombrables fets inquietants sobre la fundació Oracle per tot internet. La raó per no utilitzar una versió recent era "requereix una connexió a internet", cosa que tots considerem una ximpleria.
         </p>
       </div>
       <div
@@ -332,7 +321,7 @@
     </section>
     <section id="contact" class="flex flex-col justify-center items-center">
       <div>
-        <h2 class="p-2 m-0 font-youngSerif">Contact</h2>
+        <h2 class="p-2 m-0 font-youngSerif">Contacte</h2>
       </div>
       <div class="flex lg:flex-row w-full items-center justify-center">
         <a href="https://linkedin.com/in/a3w">
