--- a/nl_be/index.html
+++ b/nl_be/index.html
@@ -19,7 +19,7 @@
   <link rel="apple-touch-icon" href="/assets/img/logo.svg">
   <link rel="icon" type="image/svg" href="/assets/img/logo.svg">
 
-  <link rel="stylesheet" href="/assets/css/finalV1.css">
+  <link rel="stylesheet" href="/assets/css/final.css">
 
   <script type="module" src="/assets/js/main.js"></script>
 
@@ -47,9 +47,9 @@
     </div>
 
     <div id="langSelector" class="mt-3 sm:order-3 text-center">
-      <a href="javascript:void(0)"><img class="mr-2" src="/assets/img/uk.svg" alt="English"></a>
-      <a href="javascript:void(0)"><img class="mr-2" src="/assets/img/netherlands.svg" alt="Dutch"></a>
-      <a href="javascript:void(0)"><img src="/assets/img/senyera.svg" alt="Catalan"></a>
+      <a href="javascript:void(0)"><img class="mr-2" src="/assets/img/uk.svg" alt="en_gb"></a>
+      <a href="javascript:void(0)"><img class="mr-2" src="/assets/img/netherlands.svg" alt="nl_be"></a>
+      <a href="javascript:void(0)"><img src="/assets/img/senyera.svg" alt="cat"></a>
     </div>
   </nav>
 
