updated education rant :)

--- a/index.html
+++ b/index.html
@@ -270,15 +270,7 @@
           Notice
         </h4>
         <p class="mx-2">
-          Allow me this moment to rant about the pointlessness of education in Belgium. It sucks, it really does.
-          Anything that is not self-educted is either outdated crap or a cesspool of subjective/opinion-based teachings.
-          Of course this is also true in IT courses where up-to-datedness (I made that word up) is essential in many
-          places. An example which fits perfectly in both categories is as follows. We were forced to install the ORACLE
-          SQL Server varient (version 11g, one that is from 2011 - more than a decennium old since writing this). This
-          particular
-          piece of garbage is a compatibility nightmare, it doesn't work on anything not called Windows. You can also
-          find numerous unsettling facts about the Oracle foundation all over the internet. The reason for not using a
-          recent version was "it requires an internet connection", which we all know is hogwash of course.
+          Allow me this moment to rant about the pointlessness of education in Belgium. There is no reason whatsoever to graduate in IT (or to be proud if you decide to anyway). Higher education in IT in Belgium suffers from significant deficiencies that undermine its effectiveness. Many universities prioritize quantity over quality, offering a wide range of topics without delving deeply into any, resulting in a superficial understanding rather than meaningful expertise. As a result, students are not challenged in the right way and do not develop a problem-solving mindset. This is a breeding ground for tired, bored and resentful students. The curriculum often includes outdated and irrelevant technologies, such as Oracle XE databases from 2011 and WPF, without discussing modern alternatives or the limitations of these obsolete tools. Additionally, the education system in some institutions is heavily influenced by a single dominant IT company, whose headquarters are embedded within the university itself. This company-centric approach molds the curriculum to produce graduates who fit perfectly into their workforce, stifling innovation and broader industry relevance. Furthermore, students are compelled to use proprietary software and invasive tools like the Respondus LockDown Browser, necessitating the use of Windows OS and compromising both flexibility and personal choice in their educational experience. These factors collectively contribute to an inadequate and outdated IT education in Belgium, leaving students ill-prepared for the evolving demands of the tech industry.
         </p>
       </div>
       <div
