--- a/nl_be/index.html
+++ b/nl_be/index.html
@@ -19,7 +19,7 @@
   <link rel="apple-touch-icon" href="/assets/img/logo.svg">
   <link rel="icon" type="image/svg" href="/assets/img/logo.svg">
 
-  <link rel="stylesheet" href="/assets/css/finalV1.css">
+  <link rel="stylesheet" href="/assets/css/final.css">
 
   <script type="module" src="/assets/js/main.js"></script>
 
@@ -248,6 +248,11 @@
           </div>
         </div>
       </div>
+      <div id="certifications"
+        class="mt-2 bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
+        <h3 class="m-0 py-1 pl-4">Certificeringen</h3>
+      </div>
+      
       <div
         class="bg-mediumPurple dark:bg-lightSteelBlue dark:text-black rounded-bl-full sm:rounded-none w-5/6 sm:w-full sm:py-2 sm:text-center self-end">
         <h3 class="m-0 py-1 pl-4">Ervaring</h3>
