why do I always forget this, I should automate this as well

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="apple-touch-icon" href="assets/img/logo.svg">
   <link rel="icon" type="image/svg" href="assets/img/logo.svg">
 
-  <link rel="stylesheet" href="/assets/css/final.css">
+  <link rel="stylesheet" href="/assets/css/finalV3.css">
 
   <script type="module" src="/assets/js/main.js"></script>
 
