--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta property="og:title" content="A3's Den" />
   <meta property="og:url" content="index.html" />
-  <meta property="og:image" content="https://adrigorithm.github.io/assets/img/catri.gif" />
+  <meta property="og:image" content="assets/img/catri.gif" />
   <meta property="og:image:width" content="800" />
   <meta property="og:image:height" content="800" />
   <meta property="og:type" content="website" />
@@ -19,7 +19,7 @@
   <link rel="apple-touch-icon" href="assets/img/catri.svg">
   <link rel="icon" type="image/svg" href="assets/img/catri.svg">
 
-  <link rel="stylesheet" href="/assets/css/finalV4.css">
+  <link rel="stylesheet" href="/assets/css/finalV5.css">
 
   <script type="module" src="/assets/js/main.js"></script>
 
@@ -241,6 +241,12 @@
             </p>
             <p class="bg-transPink dark:bg-transBlue dark:text-nightBlack p-1 m-0 ml-3 p-1 rounded-tr-full">
               Routing & Switching
+            </p>
+            <p class="w-5/6 bg-transPink dark:bg-transBlue dark:text-nightBlack p-1 m-0 ml-3 p-1 rounded-tr-full">
+              AWS
+            </p>
+            <p class="w-4/5 bg-transPink dark:bg-transBlue dark:text-nightBlack p-1 m-0 ml-3 p-1 rounded-tr-full">
+              Azure
             </p>
           </div>
         </div>
