--- a/pages/404.html
+++ b/pages/404.html
@@ -17,7 +17,7 @@
 
     <script type="module" src="/js/main.js"></script>
 
-    <title>Adri's cat tree - Settings</title>
+    <title>Adri's cat tree - 404</title>
 </head>
 
 <body
@@ -32,12 +32,16 @@
             <p>Projects</p>
         </a>
         <a class="py-2" href="/pages/settings.html">
-            <p class="text-dark-moss-green dark:text-burnt-umber text-xl font-bold">Settings</p>
+            <p>Settings</p>
         </a>
     </nav>
 
-    <main class="flex flex-col">
-
+    <main class="flex flex-col justify-between bg-[url(/assets/img/404.avif)] bg-cover bg-center grow">
+        <h1 class="p-4 bg-melon/80 dark:bg-eerie-black/70 text-dark-moss-green dark:text-burnt-umber text-6xl font-bold border-8 border-dark-moss-green dark:border-burnt-umber text-center">404</h1>
+        <div class="p-4 bg-melon/80 dark:bg-eerie-black/70">
+            <p class="text-center text-2xl font-bold">Whiterun Guard</p>
+            <p class="text-center">You have committed crimes against Skyrim and her people. What say you in your defence?</p>
+        </div>
     </main>
 
     <footer class="text-center bg-pale-dogwood dark:bg-night py-2 w-full">
